--- a/POT/Properties/strings.resx
+++ b/POT/Properties/strings.resx
@@ -120,8 +120,20 @@
   <data name="Check" xml:space="preserve">
     <value>Check</value>
   </data>
+  <data name="CODE" xml:space="preserve">
+    <value>CODE</value>
+    <comment>PrintME</comment>
+  </data>
   <data name="CompanyInfo" xml:space="preserve">
     <value>Company info</value>
+  </data>
+  <data name="CUSTOMERNBR" xml:space="preserve">
+    <value>CUSTOMER NBR.</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+    <comment>PrintME</comment>
   </data>
   <data name="DeleteDBUser" xml:space="preserve">
     <value>Delete DB user</value>
@@ -129,16 +141,93 @@
   <data name="Do" xml:space="preserve">
     <value>Do</value>
   </data>
+  <data name="Document" xml:space="preserve">
+    <value>Dokument</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="DocumentNbr" xml:space="preserve">
+    <value>Document nbr.</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
   <data name="EditRegion" xml:space="preserve">
     <value>Edit region</value>
   </data>
+  <data name="MadeBy" xml:space="preserve">
+    <value>Made by</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="NAME" xml:space="preserve">
+    <value>NAME</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="NOTE" xml:space="preserve">
+    <value>NOTE</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="PACK" xml:space="preserve">
+    <value>PACK</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="Page" xml:space="preserve">
+    <value>Page</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="PARTLIST" xml:space="preserve">
+    <value>PARTLIST</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="QUA" xml:space="preserve">
+    <value>QUA</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="RegionID" xml:space="preserve">
+    <value>RegionID</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
   <data name="SelectMainRegion" xml:space="preserve">
     <value>Select main region</value>
+  </data>
+  <data name="SERIALNBR" xml:space="preserve">
+    <value>SERIAL NBR</value>
+    <comment>PrintME</comment>
   </data>
   <data name="Set" xml:space="preserve">
     <value>Set</value>
   </data>
   <data name="SetDBUser" xml:space="preserve">
     <value>Create DB user</value>
+  </data>
+  <data name="Signature" xml:space="preserve">
+    <value>Signature</value>
+    <comment>PrintME</comment>
+  </data>
+  <data name="SWIFT" xml:space="preserve">
+    <value>SWIFT</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>TIME</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="UserID" xml:space="preserve">
+    <value>UserID</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="VAT" xml:space="preserve">
+    <value>VAT</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="customer" xml:space="preserve">
+    <value>customer</value>
+  </data>
+  <data name="DELIVERY" xml:space="preserve">
+    <value>DELIVERY</value>
+  </data>
+  <data name="RECEIPT" xml:space="preserve">
+    <value>RECEIPT</value>
+  </data>
+  <data name="Made" xml:space="preserve">
+    <value>MADE</value>
+    <comment>PrintME-zaglavlje</comment>
   </data>
 </root>
