Sredeno finally na qc

--- a/POT/Properties/strings.hr.resx
+++ b/POT/Properties/strings.hr.resx
@@ -233,4 +233,11 @@
     <value>IZRADIO</value>
     <comment>PrintME-zaglavlje</comment>
   </data>
+  <data name="branchNbr" xml:space="preserve">
+    <value>Filijala</value>
+    <comment>PrintME-zaglavlje</comment>
+  </data>
+  <data name="branchAddress" xml:space="preserve">
+    <value>Adresa</value>
+  </data>
 </root>
