--- a/POT/Properties/strings.resx
+++ b/POT/Properties/strings.resx
@@ -241,4 +241,10 @@
     <value>Date</value>
     <comment>PrintME-zaglavlje</comment>
   </data>
+  <data name="DeliveryMain" xml:space="preserve">
+    <value>Delivery</value>
+  </data>
+  <data name="ReceiptMain" xml:space="preserve">
+    <value>Receipt</value>
+  </data>
 </root>
