--- a/POT/StartForm.resx
+++ b/POT/StartForm.resx
@@ -1149,4 +1149,7 @@
         /M///C+p5SgqcaqyKQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
