--- a/POT/Properties/strings.resx
+++ b/POT/Properties/strings.resx
@@ -283,4 +283,40 @@
   <data name="ACCOUNTUSE" xml:space="preserve">
     <value>Please use this account:</value>
   </data>
+  <data name="DateTime" xml:space="preserve">
+    <value>Date and time</value>
+  </data>
+  <data name="ExcRate" xml:space="preserve">
+    <value>Exchange rate (1€)</value>
+  </data>
+  <data name="OfferConn" xml:space="preserve">
+    <value>Offer connection</value>
+  </data>
+  <data name="Operater" xml:space="preserve">
+    <value>Made by</value>
+  </data>
+  <data name="PaymentForm" xml:space="preserve">
+    <value>Payment form</value>
+  </data>
+  <data name="PaymentTime" xml:space="preserve">
+    <value>Payment time</value>
+  </data>
+  <data name="ResPersone" xml:space="preserve">
+    <value>Responsible person</value>
+  </data>
+  <data name="TAX" xml:space="preserve">
+    <value>Tax</value>
+  </data>
+  <data name="TaxBase" xml:space="preserve">
+    <value>Tax base</value>
+  </data>
+  <data name="TotalSum" xml:space="preserve">
+    <value>TOTAL SUM</value>
+  </data>
+  <data name="Days" xml:space="preserve">
+    <value>days</value>
+  </data>
+  <data name="OnDay" xml:space="preserve">
+    <value>on day</value>
+  </data>
 </root>
