ISS print dodao da li je nalog zatvoren, na ISS da mi ne ispisuje 0 nego NewPartID na vec snimljenim nalozima, da mi ispravno prikazuje tko je sto napravio UserID

--- a/POT/Properties/strings.hr.resx
+++ b/POT/Properties/strings.hr.resx
@@ -325,4 +325,7 @@
   <data name="OfferValid" xml:space="preserve">
     <value>Ponuda vrijedi</value>
   </data>
+  <data name="Closed" xml:space="preserve">
+    <value>Zatvoren</value>
+  </data>
 </root>
