--- a/POT/Properties/strings.resx
+++ b/POT/Properties/strings.resx
@@ -331,4 +331,7 @@
   <data name="Service" xml:space="preserve">
     <value>Service</value>
   </data>
+  <data name="OrdersMain" xml:space="preserve">
+    <value>Orders</value>
+  </data>
 </root>
